--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,17 +3,17 @@
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <div class="logo">
-                    <a class="logo-ft scroll-top" href="#"><em>T</em>inker</a>
-                    <p>Copyright &copy; 2017 Your Company
-                        <br>Design: templatemo</p>
+                    <a class="logo-ft scroll-top" href="#"><em>Ang</em>PortPro</a>
+                    <p>Copyright &copy; 2021 <a href="http://hujjiibaba.dev">Hujjiibaba</a>
+                        <br>Design By: Hujjiibaba</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
                 <div class="location">
                     <h4>Location</h4>
                     <ul>
-                        <li>30 Raffles Ave, <br>Singapore 039803</li>
-                        <li>1 Republic Blvd, <br>Singapore 038975</li>
+                        <li>Mumbai, Mahrashtra</li>
+                        <li>India. </li>
                     </ul>
                 </div>
             </div>
@@ -21,8 +21,8 @@
                 <div class="contact-info">
                     <h4>More Info</h4>
                     <ul>
-                        <li><em>Phone</em>: 090-090-0320</li>
-                        <li><em>Email</em>: tk@company.co</li>
+                        <li><em>Phone</em>: 9967950780</li>
+                        <li><em>Email</em>: info@hujjiibaba.dev</li>
                     </ul>
                 </div>
             </div>
@@ -30,11 +30,12 @@
                 <div class="connect-us">
                     <h4>Get Social with us</h4>
                     <ul>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="https://twitter.com/HuzaifS75708535"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/huzaif.shaikh1"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="mailto:huzzii466@gmail.com"><i class="fa fa-google"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/huzaif-shaikh-99284b1b2/"><i
+                                    class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.instagram.com/hujjiibaba/"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
