--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,8 +5,7 @@
                 <div class="section-heading">
                     <h4>Contact Us</h4>
                     <div class="line-dec"></div>
-                    <p>Nunc posuere non quam at pharetra. Mauris tincidunt purus vel ultrices malesuada. Integer euismod
-                        erat ut nulla ultrices, ut auctor eros feugiat.</p>
+                    <p>Contact us for any kind of enquiry</p>
                     <div class="pop-button">
                         <h4>Send us a message</h4>
                     </div>
@@ -57,6 +56,6 @@
         4. Copy only URL and paste it within the src="" field below
     -->
     <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7895.485196115994!2d103.85995441789784!3d1.2880401763270322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7fb4e58ad9cd826e!2sSingapore+Flyer!5e0!3m2!1sen!2sth!4v1505825620371"
-        width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241317.11609823277!2d72.74109995709657!3d19.08219783958221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6306644edc1%3A0x5da4ed8f8d648c69!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1616322345854!5m2!1sen!2sin"
+        width="100%" height="500" frameborder="0" style="border:0" allowfullscreen loading="lazy"></iframe>
 </div>
