--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -6,8 +6,8 @@
                     <div class="section-heading">
                         <h4>Our Blog Posts</h4>
                         <div class="line-dec"></div>
-                        <p>Nam vulputate elementum nulla, sit amet congue ipsum malesuada pretium. Vivamus vel gravida
-                            quam.</p>
+                        <!-- <p>Nam vulputate elementum nulla, sit amet congue ipsum malesuada pretium. Vivamus vel gravida
+                            quam.</p> -->
                         <ul class="tabs clearfix" data-tabgroup="first-tab-group">
                             <li *ngFor="let post of posts; index as i"><a id="a{{i+1}}" href="#tab{{ i+1 }}"
                                     (click)="activatediv(i+1)">{{ post.title }} </a></li>
