--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,13 +6,13 @@
                     <div class="icon">
                         <img src="assets/img/service_icon_01.png" alt="">
                     </div>
-                    <h4>Smart Notifications</h4>
+                    <h4>Web Applications</h4>
                     <div class="line-dec"></div>
-                    <p>Curabitur non risus fringilla libero accumsan molestie et quis justo. Cras aliquam tempor sem,
-                        vestibulum facilisis dui. Mauris malesuada porta.</p>
-                    <div class="primary-blue-button">
+                    <!-- <p>Curabitur non risus fringilla libero accumsan molestie et quis justo. Cras aliquam tempor sem,
+                        vestibulum facilisis dui. Mauris malesuada porta.</p> -->
+                    <!-- <div class="primary-blue-button">
                         <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -20,13 +20,13 @@
                     <div class="icon">
                         <img src="assets/img/service_icon_02.png" alt="">
                     </div>
-                    <h4>Lovely Web Design</h4>
+                    <h4>Mobile Applications</h4>
                     <div class="line-dec"></div>
-                    <p>Suspendisse magna mauris, convallis vel finibus eget, lobortis dictum neque. Nam tincidunt metus
-                        nec eros dignissim consectetur. Duis mollis.</p>
-                    <div class="primary-blue-button">
+                    <!-- <p>Suspendisse magna mauris, convallis vel finibus eget, lobortis dictum neque. Nam tincidunt metus
+                        nec eros dignissim consectetur. Duis mollis.</p> -->
+                    <!-- <div class="primary-blue-button">
                         <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -34,13 +34,13 @@
                     <div class="icon">
                         <img src="assets/img/service_icon_03.png" alt="">
                     </div>
-                    <h4>Quick Support</h4>
+                    <h4>Ecommerce Applications</h4>
                     <div class="line-dec"></div>
-                    <p>Etiam quis ullamcorper augue. Morbi leo libero, malesuada eget eleifend eu, interdum sed augue.
-                        Sed tempor mi quis rhoncus convallis.</p>
-                    <div class="primary-blue-button">
+                    <!-- <p>Etiam quis ullamcorper augue. Morbi leo libero, malesuada eget eleifend eu, interdum sed augue.
+                        Sed tempor mi quis rhoncus convallis.</p> -->
+                    <!-- <div class="primary-blue-button">
                         <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -48,13 +48,13 @@
                     <div class="icon">
                         <img src="assets/img/service_icon_04.png" alt="">
                     </div>
-                    <h4>One-Click Setup</h4>
+                    <h4>CRM & CMS</h4>
                     <div class="line-dec"></div>
-                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                        Praesent viverra, nunc et mollis fermentum.</p>
-                    <div class="primary-blue-button">
+                    <!-- <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                        Praesent viverra, nunc et mollis fermentum.</p> -->
+                    <!-- <div class="primary-blue-button">
                         <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
