--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand scroll-top"><em>T</em>inker</a>
+                <a href="#" class="navbar-brand scroll-top"><em>Ang</em>PortPro</a>
             </div>
             <!--/.navbar-header-->
             <div id="main-nav" class="collapse navbar-collapse">
@@ -31,9 +31,7 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="text-content">
-            <h2><em>TINKER</em> <span>HTML5</span> Template</h2>
-            <p>Tinker is free HTML CSS template from templatemo.com that can be used for any kind of website. Please
-                tell your friends about us. Thank you.</p>
+            <h2><em>ANGULAR</em> <span>PORTFOLIO</span>PROJECT</h2>
             <div class="primary-white-button">
                 <a href="#" class="scroll-link" data-id="about">Let's Start</a>
             </div>
